--- a/21 - Flexbox vs CSS Grid/axis-flipping-START.html
+++ b/21 - Flexbox vs CSS Grid/axis-flipping-START.html
@@ -35,6 +35,13 @@
   </div>
 
   <style>
+    .flipper {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    }
+    .flipper.flip {
+      grid-template-columns: 1fr;
+    }
   </style>
 </body>
 
