--- a/23 - Bootstrappy Grid with CSS Variables/grid-START.html
+++ b/23 - Bootstrappy Grid with CSS Variables/grid-START.html
@@ -13,13 +13,24 @@
 
   <div class="grid">
     <div class="item">1</div>
-    <div class="item">2</div>
+    <div class="item" style="--span: 7">wesbos</div>
     <div class="item">3</div>
     <div class="item">4</div>
   </div>
 
   <style>
-    .grid {}
+    .grid {
+      grid-template-columns: repeat(12, minmax(0, 1fr));
+      display: grid;
+      grid-gap: 20px;
+    }
+    
+    .item {
+      width: 100%;
+      min-width: 0;
+      --span: 1;
+      grid-column: span var(--span);
+    }
   </style>
 
 </body>
